# clickplanet-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.click-persister  Dockerfile.click-server  Dockerfile.robot  Dockerfile.tile-syncer-robot  Dockerfile.watchguard-robot  README.md  build-click-server.sh  build.sh  country_to_tiles.json  docker-compose.yml  index.html  tile_to_countries.json
.github/workflows/: build-and-test.yml
clickplanet-browser/: Cargo.toml
clickplanet-browser/src/: lib.rs
clickplanet-client/: Cargo.toml
clickplanet-client/src/: client.rs  lib.rs
clickplanet-osm-extractor/: Cargo.toml
clickplanet-osm-extractor/src/: osm_extractor.rs
clickplanet-proto/: Cargo.toml  build.rs
clickplanet-proto/proto/: clicks.proto
clickplanet-proto/src/: lib.rs
clickplanet-robot/: Cargo.toml
clickplanet-robot/src/: coordinates.rs  country_watchguard.rs  country_watchguard_robot.rs  geolookup.rs  main.rs  tile_syncer.rs  tile_syncer_robot.rs
clickplanet-server/: Cargo.toml
clickplanet-server/src/: click_persistence.rs  click_server.rs  click_service.rs  constants.rs  in_memory_click_persistence.rs  jetstream_click_streamer.rs  main.rs  nats_commons.rs  ownership_service.rs  redis_click_persistence.rs  redis_click_persistence_service.rs  state_click_persister.rs  telemetry.rs
clickplanet-webapp/: Cargo.toml  Dioxus.toml  README.md
clickplanet-webapp/src/: lib.rs  main.rs  protobuf.rs  simple_display.rs  simple_list_display.rs  websocket.rs
clickplanet-webapp/src/app/: countries.rs
clickplanet-webapp/src/app/components/: block_button.rs  buy_me_a_coffee.rs  close_button.rs  discord_button.rs  modal.rs  modal_manager.rs  on_load_modal.rs  select_with_search.rs
clickplanet-webapp/src/backends/: backend.rs  fake_backend.rs  http_backend.rs
clickplanet-webapp/src/scripts/: compute_points.rs  generate_atlas.rs
proto/: clicks.proto
reverse-engineering/: actions.sh  package-lock.json  package.json  parse.js
src/: client.rs  coordinates.rs  country_watchguard.rs  geolookup.rs  lib.rs  main.rs  model.rs  tor_test.rs
