[workspace]
members = [
    "clickplanet-client",
    "clickplanet-server",
    "clickplanet-webapp",
    "clickplanet-proto",
    "clickplanet-robot"
]

[workspace.dependencies]
prost = "0.13.4"
tonic = "0.12.3"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["__rustls-tls", "rustls-tls-native-roots","connect"] }
futures = "0.3.31"
url = "2.5.4"
native-tls = "0.2"
base64 = "0.21.7"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
futures-util = "0.3.31"
webpki-roots = "0.26.7"
rstar = "0.12.2"
geojson = "0.24.1"
rayon = "1.10.0"
clap = { version = "4.5.23", features = ["derive", "env"] }
tokio-retry = "0.3.0"
thiserror = "2.0.6"
