[package]
name = "clickplanet-browser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
clickplanet-proto = { path = "../clickplanet-proto" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "console", "Window", "Document", "Element", "HtmlElement", "Node", "BinaryType"] }
js-sys = "0.3"
prost-build = "0.13.4"
prost = "0.13.4"