[package]
name = "clickplanet-client"
version = "0.1.0"
edition = "2021"
description = "A Rust client for the ClickPlanet game"
license = "MIT"
repository = "https://github.com/valdo404/clickplanet-client"

[lib]
name = "clickplanet_client"
path = "src/lib.rs"

[dependencies]
clickplanet-proto = { path = "../clickplanet-proto" }

# Core dependencies from workspace
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
url.workspace = true
native-tls.workspace = true
base64.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
webpki-roots.workspace = true
geojson.workspace = true
clap.workspace = true
tokio-retry.workspace = true
rayon.workspace = true
rstar.workspace = true

# Additional dependencies specific to client
rustls = { version = "0.23.19", features = ["std"] }