[package]
name = "clickplanet-client"
version = "0.1.0"
edition = "2021"
description = "A Rust client for the ClickPlanet game"
license = "MIT"
repository = "https://github.com/valdo404/clickplanet-client"

[lib]
name = "clickplanet_client"
path = "src/lib.rs"

[dependencies]
clickplanet-proto = { path = "../clickplanet-proto" }

# Core dependencies from workspace
prost.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
url.workspace = true
base64.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-retry.workspace = true
futures-util = "0.3.31"
rayon = "1.10.0"

# Additional dependencies specific to client
