[package]
name = "clickplanet-robot"
version = "0.1.0"
edition = "2021"
description = "Robot implementation for ClickPlanet game"
license = "MIT"

[dependencies]
clickplanet-proto = { path = "../clickplanet-proto" }
clickplanet-client = { path = "../clickplanet-client" }
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true
clap.workspace = true

serde.workspace = true
serde_json.workspace = true
geojson.workspace = true
rayon.workspace = true
rstar.workspace = true

anyhow = "1.0"
thiserror = "1.0"
rand = "0.8.5"
rustls = { version = "0.23.19", features = ["ring"] }

[[bin]]
name = "country-watchguard"
path = "src/country_watchguard_robot.rs"

[[bin]]
name = "tile-syncer"
path = "src/tile_syncer_robot.rs"