[package]
name = "clickplanet-webapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
clickplanet-proto = { path = "../clickplanet-proto" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "console",
    "Window", "Document", "Element", "HtmlElement", "Node", "BinaryType"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.4"

serde_json.workspace = true
serde.workspace = true
prost.workspace = true
