[package]
name = "clickplanet-webapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "generate-atlas"
path = "src/scripts/generate_atlas.rs"

[[bin]]
name = "compute-points"
path = "src/scripts/compute_points.rs"

[dependencies]
clickplanet-proto = { path = "../clickplanet-proto" }
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
    "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "console",
    "Window", "Document", "Element", "HtmlElement", "Node", "BinaryType"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6.5"
serde.workspace = true
prost.workspace = true
anyhow = "1.0"
image = "0.24"
serde_json = "1.0"
glam = "0.29.2"
rand = "0.9.0-beta.1"
uuid = { version = "1.11.0", features = ["v4"] }
